--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 	<h3>h3</h3>
 
 	<p class="OLSKCommonVideoListItem">
-		<iframe src="//"></iframe>
+		<iframe src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="></iframe>
 	</p>
 </div>
 
