--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
 	<input class="OLSKMobileSafariRemoveDefaultInputStyle" placeholder="OLSKMobileSafariRemoveDefaultInputStyle type=text" type="text" />
 </p>
 
+<hr role="presentation" />
+
 <p>
 	<textarea placeholder="textarea"></textarea>
 </p>
