--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 
 <hr role="presentation" />
 
+<div class="OLSKLanding OLSKCommonCard">
+
+<div>
+	<span class="OLSKLandingHeading">OLSKLandingHeading</span>
+	<p class="OLSKLandingBlurb">OLSKLandingBlurb</p>
+	<a class="OLSKLandingAction OLSKDecorPress OLSKDecorPressCall" href="#">OLSKLandingAction</a>
+</div>
+
+</div>
+
+<hr role="presentation" />
+
 <div class="OLSKCommonCard OLSKCommonCrownCard">
 	<section>
 		<span>Card CrownCard</span>
