--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 	</tr>
 </table>
 
+<h1>form</h1>
+
 <form>
 	<p>
 		<input placeholder="input" />
@@ -156,7 +158,7 @@
 	</p>
 </div>
 
-<h1>form</h1>
+<h1>OLSKDecorBigForm</h1>
 
 <form class="OLSKDecorBigForm">
 
