--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 
 <p><a href="#">a</a></p>
 
+<p><img src="data:image/svg+xml;base64,PHN2ZyBoZWlnaHQ9IjQwMCIgd2lkdGg9IjYwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBkPSJtMCAwaDYwMHY0MDBoLTYwMHoiIGZpbGw9IiM4MDgwODAiLz48Y2lyY2xlIGN4PSIzMDAiIGN5PSIyMDAiIGZpbGw9IiNhYWEiIHI9IjEwMCIvPjwvc3ZnPg==" role="presentation" /></p>
+
 <p class="OLSKDecorNotice">Notice</p>
 <p class="OLSKCommonAlert">Alert</p>
 
