--- a/index.html
+++ b/index.html
@@ -182,6 +182,16 @@
 
 <hr role="presentation" />
 
+<h1>OLSKDecorModule</h1>
+
+<div class="OLSKDecorModule">
+
+<p>alfa bravo charlie</p>
+
+</div>
+
+<hr role="presentation" />
+
 </div>
 
 <!-- APP -->
