--- a/index.html
+++ b/index.html
@@ -192,6 +192,21 @@
 
 <hr role="presentation" />
 
+<h1>OLSKLatest</h1>
+
+<div class="OLSKLatest OLSKDecorModule">
+
+	<h2>heading</h2>
+
+	<dl class="OLSKLatestList">
+		<dt><a class="OLSKLatestListItem" href="#" >link</a></dt>
+		<dd class="OLSKLatestListItemBlurb">description</dd>
+	</dl>
+
+</div>
+
+<hr role="presentation" />
+
 </div>
 
 <!-- APP -->
