--- a/index.html
+++ b/index.html
@@ -192,15 +192,15 @@
 
 <hr role="presentation" />
 
-<h1>OLSKLatest</h1>
+<h1>OSFeedbox</h1>
 
-<div class="OLSKLatest OLSKDecorModule">
+<div class="OSFeedbox OLSKDecorModule">
 
 	<h2>heading</h2>
 
-	<dl class="OLSKLatestList">
-		<dt><a class="OLSKLatestListItem" href="#" >link</a></dt>
-		<dd class="OLSKLatestListItemBlurb">description</dd>
+	<dl class="OSFeedboxList">
+		<dt><a class="OSFeedboxListItem" href="#" >link</a></dt>
+		<dd class="OSFeedboxListItemBlurb">description</dd>
 	</dl>
 
 </div>
