--- a/index.html
+++ b/index.html
@@ -192,15 +192,15 @@
 
 <hr role="presentation" />
 
-<h1>OSFeedbox</h1>
+<h1>feedbox</h1>
 
-<div class="OSFeedbox OLSKDecorModule">
+<div class="feedbox OLSKDecorModule">
 
 	<h2>heading</h2>
 
-	<dl class="OSFeedboxList">
-		<dt><a class="OSFeedboxListItem" href="#" >link</a></dt>
-		<dd class="OSFeedboxListItemBlurb">description</dd>
+	<dl class="feedboxList">
+		<dt><a class="feedboxListItem" href="#" >link</a></dt>
+		<dd class="feedboxListItemBlurb">description</dd>
 	</dl>
 
 </div>
